Wallets kinda work