@@ -1,7 +1,14 @@
 package com.leafaries.financemanagerbackend.wallet;
 
+import com.leafaries.financemanagerbackend.user.ResourceNotFoundException;
+import com.leafaries.financemanagerbackend.user.UserRepository;
+import com.leafaries.financemanagerbackend.user.User;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -12,54 +19,63 @@ public class WalletService {
 
     private final WalletRepository walletRepository;
     private final ModelMapper modelMapper;
+    private final UserRepository userRepository;
 
     @Autowired
-    public WalletService(WalletRepository walletRepository, ModelMapper modelMapper) {
+    public WalletService(WalletRepository walletRepository, ModelMapper modelMapper, UserRepository userRepository) {
         this.walletRepository = walletRepository;
         this.modelMapper = modelMapper;
+        this.userRepository = userRepository;
     }
 
     public WalletDto createWallet(CreateWalletDto createWalletDto) {
-        if (createWalletDto == null) {
-            throw new IllegalArgumentException("CreateWalletDto cannot be null");
-        }
-
-        Wallet walletEntity = modelMapper.map(createWalletDto, Wallet.class);
-
-        Wallet savedWalletEntity = walletRepository.save(walletEntity);
-
-        return modelMapper.map(savedWalletEntity, WalletDto.class);
+        Wallet wallet = modelMapper.map(createWalletDto, Wallet.class);
+        User currentuser = getCurrentUser();
+        wallet.setUser(currentuser);
+        Wallet savedWallet = walletRepository.save(wallet);
+        return modelMapper.map(savedWallet, WalletDto.class);
     }
 
     public WalletDto getWalletById(Long id) {
-        return walletRepository.findById(id)
-                .map(wallet -> modelMapper.map(wallet, WalletDto.class))
-                .orElse(null);
+        Wallet wallet = walletRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Wallet not found"));
+        if (!wallet.getUser().equals(getCurrentUser())) {
+            throw new AccessDeniedException("Access denied");
+        }
+        return modelMapper.map(wallet, WalletDto.class);
     }
 
     public List<WalletDto> getAllWallets() {
-        return walletRepository.findAll().stream()
-                .map(wallet -> modelMapper.map(wallet, WalletDto.class))
-                .collect(Collectors.toList());
+        User currentuser = getCurrentUser();
+        List<Wallet> wallets = walletRepository.findAllByUserId(currentuser.getId());
+        return wallets.stream().map(wallet -> modelMapper.map(wallet, WalletDto.class)).toList();
     }
 
     public WalletDto updateWallet(Long id, CreateWalletDto createWalletDto) {
-        if (!walletRepository.existsById(id)) {
-            return null;
+        Wallet wallet = walletRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Access denied"));
+        if (!wallet.getUser().equals(getCurrentUser())) {
+            throw new AccessDeniedException("Access denied");
         }
-
-        Wallet wallet = modelMapper.map(createWalletDto, Wallet.class);
-        wallet.setId(id); // Ensure the ID is set for updating
+        modelMapper.map(createWalletDto, wallet);
         Wallet updatedWallet = walletRepository.save(wallet);
         return modelMapper.map(updatedWallet, WalletDto.class);
     }
 
     public boolean deleteWallet(Long id) {
-        if (!walletRepository.existsById(id)) {
-            return false;
+        Wallet wallet = walletRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Wallet not found"));
+        if (!wallet.getUser().equals(getCurrentUser())) {
+            throw new AccessDeniedException("Access denied");
         }
-
-        walletRepository.deleteById(id);
+        walletRepository.delete(wallet);
         return true;
+    }
+
+    // Helper method to get the currently logged-in user
+    private User getCurrentUser() {
+        Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        if (principal instanceof User) {
+            String username = ((UserDetails) principal).getUsername();
+            return userRepository.findByUsername(username).orElseThrow(() -> new UsernameNotFoundException("User not found"));
+        }
+        throw new IllegalArgumentException("User not authenticated");
     }
 }
